--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       }
       #filterBar option {color: black;}
     </style>
-  <script type="module" crossorigin src="./assets/index.185def40.js"></script>
-  <link rel="modulepreload" href="./assets/vendor.b1e09671.js">
-  <link rel="stylesheet" href="./assets/index.a375f4c8.css">
+  <script type="module" crossorigin src="https://donosti1.github.io/portal-obras/assets/index.08693439.js"></script>
+  <link rel="modulepreload" href="https://donosti1.github.io/portal-obras/assets/vendor.b1e09671.js">
+  <link rel="stylesheet" href="https://donosti1.github.io/portal-obras/assets/index.a375f4c8.css">
 </head>
   <body>
     <div id="root"></div>
