--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       }
       #filterBar option {color: black;}
     </style>
-  <script type="module" crossorigin src="/portal-obras/assets/index.646ea912.js"></script>
-  <link rel="modulepreload" href="/portal-obras/assets/vendor.b1e09671.js">
-  <link rel="stylesheet" href="/portal-obras/assets/index.a375f4c8.css">
+  <script type="module" crossorigin src="./assets/index.b2d5dfc1.js"></script>
+  <link rel="modulepreload" href="./assets/vendor.b1e09671.js">
+  <link rel="stylesheet" href="./assets/index.a375f4c8.css">
 </head>
   <body>
     <div id="root"></div>
