--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         }
       }(window.location))
     </script>
-  <script type="module" crossorigin src="./static/index.ea50339f.js"></script>
-  <link rel="modulepreload" href="./static/vendor.12d4978f.js">
-  <link rel="stylesheet" href="./static/index.a375f4c8.css">
+  <script type="module" crossorigin src="/portal-obras/static/index.8f200ff3.js"></script>
+  <link rel="modulepreload" href="/portal-obras/static/vendor.12d4978f.js">
+  <link rel="stylesheet" href="/portal-obras/static/index.a375f4c8.css">
 </head>
   <body>
     <div id="root"></div>
