--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       }
       #filterBar option {color: black;}
     </style>
-  <script type="module" crossorigin src="/portal-obras/static/index.c88da262.js"></script>
-  <link rel="modulepreload" href="/portal-obras/static/vendor.12d4978f.js">
-  <link rel="stylesheet" href="/portal-obras/static/index.a375f4c8.css">
+  <script type="module" crossorigin src="./static/index.347d661e.js"></script>
+  <link rel="modulepreload" href="./static/vendor.12d4978f.js">
+  <link rel="stylesheet" href="./static/index.a375f4c8.css">
 </head>
   <body>
     <div id="root"></div>
